--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -17,7 +17,11 @@ button{
   border-radius: 10px;
   text-align: center;
 }
-#container header{
+
+#container-painel, #container{
+  flex-direction: column;
+}
+#container header, #container-painel header{
   width:100%;
   height: 7.0625rem;
   background-color: #000000;
@@ -126,6 +130,9 @@ footer{
   width:35.563rem;
   height:5.625rem;
 }
+.modal-register{
+  margin-top:100px;
+}
 #modal-login .btns, #modal-register .btns{
     width: 100%;
     display: flex;
@@ -147,17 +154,39 @@ footer{
 }
 
 /* painel */
+#painel-content{    
+  display: flex;
+  flex-direction: column;
+  height:60.0rem;
+  width: 100%;  
+  align-items: center;  
+}
+#painel-content #painel-title{
+  margin-top:50px;
+}
 #expenses-titles{    
     display: flex;    
     width: 100%;
-    justify-content: space-around;
     height: 5.5rem;
-    background-color: green;
-    align-items: center;
+    background-color: green;     
+}
+#expenses-titles h3{    
+  width:100px;
+  text-align:center;
+}
+#expenses-content{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height:auto;
 }
 #expenses-table{
   width: 100%;
   height:auto;
+}
+#expenses-table div span{
+  width:100px;
+  text-align:center;
 }
 .expenses{
   display: flex;
@@ -168,8 +197,8 @@ footer{
   background-color: #C4C4C4;
 }
 .btn-expense{
-  position: fixed;
-  width: 60px;
+  position: absolute;
+  width: 40px;
   right:10px;
 }
 .btn-expense button{
@@ -191,11 +220,38 @@ select{
   color:#ffffff;
   font-size: 32px;
 }
-#add-expense{
-  background:none;
-  border:none;
+#add-expense img{
+  width:50px;
+  height:50px;
+  background:transparent;
+  border:transparent;
   position: fixed;
   bottom:150px;
   right: 50px;
 }
+#add-category{
+  width:40px;
+  height:40px;
+  background:none;
+  border: 1px solid #000;
+  border-radius:50%;
+  position: fixed;
+  bottom:220px;
+  right: 60px;
 
+}
+.hidden{
+  display:none;
+}
+.active{
+  display:flex;
+}
+.fade {
+  opacity: 0;
+  z-index: 0;
+}
+.active .fade,
+.fade.active {
+  opacity: 1;
+  z-index: 10;
+}
